--- a/www/testingtools/selfprofile.html
+++ b/www/testingtools/selfprofile.html
@@ -9,6 +9,55 @@
   <meta charset="UTF-8">
 </head>
 
+
+<style>
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #007bff;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+}
+
+li a:hover {
+    background-color: #0069d9;
+}
+
+a:hover {
+    text-decoration: none;
+	color:white;
+}
+
+#SocialLink {
+float: right;
+}
+
+label {
+font-weight: 600;
+}
+</style>
+
+
+<ul>
+  <li><a href="/formgen">Ticket Form</a></li>
+  <li><a href="/selfprofile">Profile</a></li>
+  <li id="SocialLink"><a href="https://github.com/JonHypersomniac/hyenas">GitHub</a></li>
+  <li id="SocialLink"><a href="https://discord.gg/RythnDn">Discord</a></li>
+</ul>
+
+
 <body>
 
 
