--- a/www/testingtools/formgen.html
+++ b/www/testingtools/formgen.html
@@ -7,6 +7,54 @@
 <title>Ticket Form</title>
 <meta charset="UTF-8">
 </head>
+<style>
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #007bff;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+}
+
+li a:hover {
+    background-color: #0069d9;
+}
+
+a:hover {
+    text-decoration: none;
+	color:white;
+}
+
+#SocialLink {
+float: right;
+}
+
+label {
+font-weight: 600;
+}
+</style>
+
+
+<ul>
+  <li><a href="/formgen">Ticket Form</a></li>
+  <li><a href="/selfprofile">Profile</a></li>
+  <li id="SocialLink"><a href="https://github.com/JonHypersomniac/hyenas">GitHub</a></li>
+  <li id="SocialLink"><a href="https://discord.gg/RythnDn">Discord</a></li>
+</ul>
+
+
 
 <body>
   <form action="/nav/auth" method="post" class="p-5">
@@ -14,11 +62,11 @@
   <div class="row">
     <div class="col">
       <label for="lid">User ID</label>
-      <input type="email" id="lid" class="form-control" name="loginid" placeholder="enter login id (email)..." />
+      <input type="email" id="lid" class="form-control" name="loginid" placeholder="Enter Login ID (Email)..." />
     </div>
     <div class="col">
       <label for="pass">Password</label>
-      <input type="password" id="pass" class="form-control" name="password" placeholder="enter password..." />
+      <input type="password" id="pass" class="form-control" name="password" placeholder="Enter Password..." />
     </div>
   </div>
 
