--- a/www/testingtools/loginform.html
+++ b/www/testingtools/loginform.html
@@ -52,6 +52,11 @@
         <label for="pass">Password</label>
         <input type="password" id="pass" class="form-control" name="password" placeholder="Enter Password..." />
       </div>
+	    <div class="col-sm">
+        <label for="sv">Firmware</label>
+        <input type="text" id="sv" class="form-control" name="firmware" placeholder="Enter Firmware Version" />
+      </div>
+	  
     </div>
 
     <div class="form-group">
@@ -63,12 +68,15 @@
   <div class="card-body">
     <h5 class="card-title">Input</h5>
     <p class="card-text">
-      <code id="input" style="white-space: pre-line">loginid=[loginid]&password=[password]&serviceid=[serviceid]</code>
+      <code id="input" style="white-space: pre-line">loginid=[loginid]&password=[password]&serviceid=[serviceid]&firmware=[firmware]</code>
     </p>
 <button type="submit" class="btn btn-primary">Submit (will download file)</button>
 
   </div>
 </div>
+
+
+
 
 
   </form>
@@ -82,7 +90,7 @@ $('input').on('input', function () {
 // since the contents of the input codebox don't matter unlike the profile one we could do whatever here
 
 var request = // template as i can't really find a function that does the job for me
-`loginid=${$('input[name=loginid]').val()}&password=${$('input[name=password]').val()}&serviceid=${$('input[name=serviceid]').val()}`;
+`loginid=${$('input[name=loginid]').val()}&password=${$('input[name=password]').val()}&serviceid=${$('input[name=serviceid]').val()}&firmware=${$('input[name=firmware]').val()}`;
 
 $('#input').text(request);
 
