--- a/www/testingtools/profileform.html
+++ b/www/testingtools/profileform.html
@@ -15,7 +15,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
 
-    <a class="navbar-brand">Hyenas Testing Page</a>
+    <a class="navbar-brand" style="color: #595959; font-weight: 550;">Hyenas Testing Page</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
