--- a/www/testingtools/loginform.html
+++ b/www/testingtools/loginform.html
@@ -12,11 +12,27 @@
 
 </head>
 
+<style>
+
+img {
+
+width: 53px;
+
+height: 41px;
+
+margin: 5px;
+
+margin-right: 15px;
+}
+
+</style>
+
+
 
 <body>
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
+  <img src="https://i.imgur.com/EMoofXc.png"></img>
     <a class="navbar-brand" style="color: #595959; font-weight: 550;">Hyenas Testing Page</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
