--- a/www/testingtools/genprofileform.html
+++ b/www/testingtools/genprofileform.html
@@ -40,14 +40,14 @@ margin-right: 15px;
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="/loginform">Login Form<span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="/loginform">Login Form</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/profileform">Get Profile Form</a>
         </li>
-				<li class="nav-item">
-          <a class="nav-link" href="/genprofileform">Generate Profile Form</a>
+        <li class="nav-item active">
+          <a class="nav-link" href="/genprofileform">Generate Profile Form<span class="sr-only">(current)</span></a>
         </li>
       </ul>
       <span class="navbar-text">
@@ -60,16 +60,17 @@ margin-right: 15px;
       </span>
     </div>
   </nav>
-  <form action="/nav/auth" method="post" class="p-5">
+  
+    <form action="/nav/auth" method="post" class="p-5">
 
     <div class="row">
       <div class="col-sm">
-        <label for="lid">User ID</label>
-        <input type="email" id="lid" class="form-control" name="loginid" placeholder="Enter Login ID (Email)..." />
+        <label for="username">Username</label>
+        <input type="text" id="username" class="form-control" name="username" placeholder="Enter Your Username..." />
       </div>
       <div class="col-sm">
-        <label for="pass">Password</label>
-        <input type="password" id="pass" class="form-control" name="password" placeholder="Enter Password..." />
+        <label for="ucbgp">Profile Background Color</label>
+        <input type="text" id="ucbgp" class="form-control" name="ucbgp" placeholder="Enter Hex color value..." />
       </div>
 
 	  
@@ -80,28 +81,34 @@ margin-right: 15px;
 	  
     </div>
 
-    <div class="form-group">
-      <label for="sid">Service ID</label>
-      <input type="text" id="sid" class="form-control" name="serviceid" placeholder="enter service id..." value="IV0001-NPXS01001_00" />
+	<div class="row">
+    <div class="col-sm">
+      <label for="plusicon">Playstation Plus</label>
+      <input type="text" id="plusicon" class="form-control" name="plusicon" placeholder="0 - False, 1 - True" />
     </div>
+	    <div class="col-sm">
+      <label for="ptlp">ptlp?</label>
+      <input type="text" id="ptlp" class="form-control" name="ptlp" placeholder="0 - False, 1 - True" />
+    </div>
+	</div>
 	
 <div class="row">
       <div class="col-sm">
-        <label for="platform">Platform</label>
-        <input type="text" id="platform" class="form-control" name="platform" placeholder="Enter Platform..." />
+        <label for="lang1">Language 1</label>
+        <input type="text" id="lang1" class="form-control" name="lang1" placeholder="Enter Language ID..." />
       </div>
 	  		    <div class="col-sm">
-        <label for="firmware">Firmware</label>
-        <input type="text" id="firmware" class="form-control" name="firmware" placeholder="Enter Firmware Version..." />
+        <label for="lang2">Language 2</label>
+        <input type="text" id="lang2" class="form-control" name="lang2" placeholder="Enter Language ID..." />
       </div>
 	  	  		    <div class="col-sm">
-        <label for="avatarsize">Avatar Size</label>
-        <input type="text" id="avatarsize" class="form-control" name="avatarsize" placeholder="Enter Avatar size number (ex. 1)..." />
+        <label for="lang3">Language 3</label>
+        <input type="text" id="lang3" class="form-control" name="lang3" placeholder="Enter Language ID..." />
       </div>
 	  
 	  	  	  		    <div class="col-sm">
-        <label for="jidsubdomain">JID Sub-Domain</label>
-        <input type="text" id="jidsubdomain" class="form-control" name="jidsubdomain" value="EPICGAMERUSERNAME@b5.us.np.openpsn.net" />
+        <label for="aboutme">Aboutme</label>
+        <input type="text" id="aboutme" class="form-control" name="aboutme" placeholder="Describe Yourself!" />
       </div>
 	  
 </div>
@@ -110,7 +117,7 @@ margin-right: 15px;
   <div class="card-body">
     <h5 class="card-title">Input</h5>
     <p class="card-text">
-      <code id="input" style="white-space: pre-line">loginid=[loginid]&password=[password]&serviceid=[serviceid]&firmware=[firmware]&country=[country]&platform=[platform]&avatarsize=[avatarsize]&jidsubdomain=[jidsubdomain]</code>
+      <code id="input" style="white-space: pre-line">username=[username]&ucbgp=[ucbgp]&country=[country]&plusicon=[plusicon]&ptlp=[ptlp]&lang1=[lang1]&lang2=[lang2]&lang3=[lang3]&aboutme=[aboutme]</code>
     </p>
 <button type="submit" class="btn btn-primary">Submit (will download file)</button>
 
@@ -122,23 +129,21 @@ margin-right: 15px;
 
 
   </form>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-
-<script>
+  
+  
+  
+  </body>
+  
+  <script>
 $('input').on('input', function () {
 // since the contents of the input codebox don't matter unlike the profile one we could do whatever here
 
 var request = // template as i can't really find a function that does the job for me
-`loginid=${$('input[name=loginid]').val()}&password=${$('input[name=password]').val()}&serviceid=${$('input[name=serviceid]').val()}&firmware=${$('input[name=firmware]').val()}&avatarsize=${$('input[name=avatarsize]').val()}&country=${$('input[name=country]').val()}&platform=${$('input[name=platform]').val()}&jidsubdomain=${$('input[name=jidsubdomain]').val()}`;
+`username=${$('input[name=username]').val()}&ucbgp=${$('input[name=ucbgp]').val()}&country=${$('input[name=country]').val()}&plusicon=${$('input[name=plusicon]').val()}&ptlp=${$('input[name=ptlp]').val()}&lang1=${$('input[name=lang1]').val()}&lang2=${$('input[name=lang2]').val()}&lang3=${$('input[name=lang3]').val()}&aboutme=${$('input[name=aboutme]').val()}`;
 
 $('#input').text(request);
 
 });
   </script>
-
-</body>
-
-</html>
+  
+  </html>
