--- a/www/testingtools/profileform.html
+++ b/www/testingtools/profileform.html
@@ -43,6 +43,9 @@ margin-right: 15px;
         <li class="nav-item active">
           <a class="nav-link" href="/profileform">Get Profile Form <span class="sr-only">(current)</span></a>
         </li>
+		<li class="nav-item">
+          <a class="nav-link" href="/genprofileform">Generate Profile Form</a>
+        </li>
       </ul>
       <span class="navbar-text">
 
