--- a/www/testingtools/signatureform.html
+++ b/www/testingtools/signatureform.html
@@ -95,7 +95,7 @@ function calc()
 
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <img src="https://i.imgur.com/EMoofXc.png"></img>
+	<img src="/logo.png"></img>
     <a class="navbar-brand" style="color: #595959; font-weight: 550;">Hyenas Testing Page</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
