--- a/www/testingtools/genprofileform.html
+++ b/www/testingtools/genprofileform.html
@@ -49,6 +49,9 @@ margin-right: 15px;
         <li class="nav-item active">
           <a class="nav-link" href="/genprofileform">Generate Profile Form<span class="sr-only">(current)</span></a>
         </li>
+				<li class="nav-item">
+          <a class="nav-link" href="/tmdbXML">Grab XML Title Metadata</a>
+        </li>
       </ul>
       <span class="navbar-text">
 
