--- a/www/testingtools/profileform.html
+++ b/www/testingtools/profileform.html
@@ -46,6 +46,9 @@ margin-right: 15px;
 		<li class="nav-item">
           <a class="nav-link" href="/genprofileform">Generate Profile Form</a>
         </li>
+				<li class="nav-item">
+          <a class="nav-link" href="/tmdbXML">Grab XML Title Metadata</a>
+        </li>
       </ul>
       <span class="navbar-text">
 
